[gd_scene load_steps=9 format=3 uid="uid://o4dpd5iks8mj"]

[ext_resource type="PackedScene" uid="uid://c1fnn1l64pxpx" path="res://scenes/player/player.tscn" id="1_player"]
[ext_resource type="TileSet" uid="uid://bvqowixejw8pm" path="res://resources/ground_tileset.tres" id="2_tileset"]
[ext_resource type="Script" path="res://scripts/tilemap_painter.gd" id="3_painter"]
[ext_resource type="PackedScene" uid="uid://b8h1v5p2k3nar" path="res://scenes/hazards/Spike.tscn" id="4_spike"]
[ext_resource type="Script" path="res://scripts/levels/level_configurator.gd" id="5_configurator"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_walls"]
size = Vector2(100, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_upper_gravity"]
size = Vector2(11520, 540)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lower_gravity"]
size = Vector2(11520, 540)

[node name="Level1" type="Node2D"]
script = ExtResource("5_configurator")

[node name="Environment" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Environment"]
modulate = Color(1, 0.5, 0.5, 1)
tile_set = ExtResource("2_tileset")
script = ExtResource("3_painter")

[node name="LeftWall" type="StaticBody2D" parent="Environment"]
position = Vector2(50, 540)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/LeftWall"]
shape = SubResource("RectangleShape2D_walls")

[node name="RightWall" type="StaticBody2D" parent="Environment"]
position = Vector2(11370, 540)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/RightWall"]
shape = SubResource("RectangleShape2D_walls")

[node name="Hazards" type="Node2D" parent="Environment"]

[node name="BottomLargeSpike1" parent="Environment/Hazards" instance=ExtResource("4_spike")]
position = Vector2(2000, 950)
type = 2

[node name="BottomLargeSpike2" parent="Environment/Hazards" instance=ExtResource("4_spike")]
position = Vector2(2128, 950)
type = 2

[node name="BottomLargeSpike3" parent="Environment/Hazards" instance=ExtResource("4_spike")]
position = Vector2(2256, 950)
type = 2

[node name="BottomSpike1" parent="Environment/Hazards" instance=ExtResource("4_spike")]
position = Vector2(2800, 950)
type = 0

[node name="BottomSpike2" parent="Environment/Hazards" instance=ExtResource("4_spike")]
position = Vector2(2864, 950)
type = 0

[node name="TopSpike1" parent="Environment/Hazards" instance=ExtResource("4_spike")]
position = Vector2(2400, 150)
type = 1

[node name="TopSpike2" parent="Environment/Hazards" instance=ExtResource("4_spike")]
position = Vector2(2464, 150)
type = 1

[node name="GravityZones" type="Node2D" parent="."]

[node name="UpperGravityZone" type="Area2D" parent="GravityZones"]
position = Vector2(5760, 270)
gravity_point_center = Vector2(0, -1)
gravity_direction = Vector2(0, -1)
gravity = 1400.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityZones/UpperGravityZone"]
shape = SubResource("RectangleShape2D_upper_gravity")

[node name="LowerGravityZone" type="Area2D" parent="GravityZones"]
position = Vector2(5760, 810)
gravity = 1400.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityZones/LowerGravityZone"]
shape = SubResource("RectangleShape2D_lower_gravity")

[node name="Player" parent="." instance=ExtResource("1_player")]
position = Vector2(960, 540)
gravity_scale = 0.0
